src/test/ui/coercion/coerce-unsafe-to-closure.stderr
error[E0277]: expected a `std::ops::FnOnce<(&str,)>` closure, found `unsafe extern "rust-intrinsic" fn(_) -> _ {std::intrinsics::transmute::<_, _>}`
  --> $DIR/coerce-unsafe-to-closure.rs:2:40
   |
LL |     let x: Option<&[u8]> = Some("foo").map(std::mem::transmute);
   |                                        ^^^ expected an `FnOnce<(&str,)>` closure, found `unsafe extern "rust-intrinsic" fn(_) -> _ {std::intrinsics::transmute::<_, _>}`
   |
   = help: the trait `std::ops::FnOnce<(&str,)>` is not implemented for `unsafe extern "rust-intrinsic" fn(_) -> _ {std::intrinsics::transmute::<_, _>}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
